[project]
name = "agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "langchain-groq>=1.1.0",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.4",
    "langsmith>=0.4.49",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pymermaid>=1.7.1",
]
